src/components/HelloHeader/HelloHeader.css
@media screen and (max-width: 800px) {
	#helloHeader {
		padding: 0 20px !important;
	}
	#hi{
		width: 100%;
		padding: 10px 0 30px 0 !important;
		padding: 0;
		text-align: center;
	}
	#name{
		margin-bottom: 26px !important;
	}
	#roles{
		width: fit-content;
		margin-left: auto;
		margin-right: auto;
	}
	.role{
		margin-left: auto !important;
		margin-right: auto !important;
		font-size: 16px !important;
	}
	.roleIcon{
		width: 38px !important;
	}
	#mobile::before{
		content: "\a";
		white-space: pre;
	}
	#headshot {
		display: none;
	}
	#name {
		font-size: 28px;
	}
	.role {
		font-size: 18px !important;
	}
	#headerContactBtns {
		justify-content: center;
		grid-auto-flow: row !important;
		margin-top: 80px !important;
	}
	#headerExtraSocials {
		justify-content: center;
		padding: 4px 0 !important;
	}
	.getInTouch {
		margin: auto;
	}
}
@keyframes roleCycle {
	0%, 30%, 66%, 100% {
		opacity: 0%;
		transform: translateY(10px);
		/* Blur is too laggy on Safari :( */
		/* filter: blur(3px); */
	}
	33%, 63% {
		opacity: 100%;
		transform: translateY(-2px);
	}
	35%, 63% {
		transform: translateY(0px);
		/* filter: blur(0px); */
	}
}
@keyframes headIn {
	0% {
		opacity: 0;
		/* filter: blur(6px); */
		transform: translateY(20px);
	}
	100% {
		opacity: 1;
		/* filter: blur(0px); */
		transform: translateY(0px);
	}
}
:root{
	--cycleDelayTime: 2s;
}
#helloHeader {
	display: flex;
	justify-content: space-evenly;
	padding: 40px;
	gap: 32px;
	margin: auto;
	max-width: var(--contentMaxWidth);
}

#bg {
	position: absolute;
	top: 0px;
	width: 100vw;
	z-index: -1;
	filter: blur(3px);
}

#hi {
	padding: 0 0 70px;
	margin: auto 0;
}

#name {
	margin-bottom: 20px;
}

#waveEmoji {
	vertical-align: middle;
	width: 40px;
	margin: 0 10px 10px 10px;
	cursor: grab;
}
.role {
	font-size: larger;
	margin-right: 6px;
	line-height: 0px;
	animation-iteration-count: infinite;
	animation-name: roleCycle;
	animation-duration: calc(3*var(--cycleDelayTime));
	opacity: 0%;
	height: 0px;
	width: fit-content;
}
.role > span {
	margin-left: 16px;
}
.role:nth-child(1) { animation-delay: calc(-4*var(--cycleDelayTime)); }
.role:nth-child(2) { animation-delay: calc(-3*var(--cycleDelayTime)); }
.role:nth-child(3) { animation-delay: calc(-2*var(--cycleDelayTime)); }

.roleIcon {
	width: 36px;
	filter: drop-shadow(1.5px 1.5px 3px #00000044);
	vertical-align: middle;
}
#headshot > img {
	width: 30vw;
	height: 300px;
	object-fit: contain;
	max-width: 400px;
	opacity: 0;
}
#headshot > img.loaded {
	animation-name: headIn;
	animation-duration: 1s;
	animation-timing-function: var(--bezierQuartOut);
	animation-fill-mode: forwards;
}
#headerContactBtns {
	margin-top: 100px;
	display: grid;
	grid-auto-flow: column;
	grid-template-columns: 165px;
	gap: 14px;
}
#headerExtraSocials {
	display: flex;
	gap: 8px;
	padding: 16px 0;
}
#hi a {
	text-decoration: none;
}

